# murmure

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  vite.config.ts
.sisyphus/notepads/voice-dictation-01/: issues.md  learnings.md
.sisyphus/notepads/voice-dictation-02-audio/: learnings.md
.sisyphus/notepads/voice-dictation-03-groq-input/: learnings.md
.sisyphus/notepads/voice-dictation-04-frontend/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: voice-dictation-01-infrastructure.md  voice-dictation-02-audio.md  voice-dictation-03-groq-input.md  voice-dictation-04-frontend.md
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  types.rs
src-tauri/src/audio/: encoder.rs  mod.rs  recorder.rs
src-tauri/src/groq/: client.rs
src-tauri/src/input/: inserter.rs  mod.rs  shortcut.rs  window.rs
src/components/: Overlay.tsx  Settings.tsx  SetupWizard.tsx
src/hooks/: useRecording.ts
src/styles/: index.css
src/utils/: tauri.ts
