[package]
name = "murmure"
version = "0.1.0"
edition = "2021"

[lib]
name = "murmure2_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-clipboard = "2.0.0"
tauri-plugin-store = "2.0.0"
thiserror = "2.0.18"
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["full"] }
keyring = "3.6.3"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
enigo = { version = "0.3", features = ["x11rb"] }

cpal = "0.15"
crossbeam-channel = "0.5"
once_cell = "1.19"
opus = "0.3"
ogg = "0.9"

[dev-dependencies]
wiremock = "0.6"

[features]
# This feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]
